--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
       android:gravity="center"
       android:text="@string/app_name"
     android:textColor="@color/primaryTextColor"
-    android:textSize="@dimen/splashScreenTitleTextSize"
-    android:textStyle="bold"/>
+    android:textSize="55sp"
+    />
 
   </LinearLayout>
