creating variables to store the name email and password, displaying a snackBar when no inputs are given

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primaryTextColor">#FFFFC300</color>
     <color name="secondaryTextColor">#FFFF4400</color>
     <color name="territialTextColor">#FF1048FF</color>
+    <color name="snackbar_error_color">#F72400</color>
 </resources>
