--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".IntroActivity">
+    tools:context=".activities.IntroActivity">
     <TextView
         android:id="@+id/tv_app_name_intro"
         android:layout_width="wrap_content"
