--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SignInActivity"
+    tools:context=".activities.SignInActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -66,7 +66,7 @@
                     android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                     >
                     <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/et_name"
+                        android:id="@+id/et_emailSignIn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
@@ -83,7 +83,7 @@
                     android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                     >
                     <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/et_password"
+                        android:id="@+id/et_passwordSignIn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/password"
