--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity"
+    tools:context=".activities.SignUpActivity"
     android:orientation="vertical"
     android:background="@color/white">
     
@@ -66,7 +66,7 @@
                     android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                     >
                     <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/name"
+                        android:id="@+id/et_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/name"
@@ -83,7 +83,7 @@
                     android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                     >
                     <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/et_name"
+                        android:id="@+id/et_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
