--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/white"
-    tools:context=".SplashActivity">
+    tools:context=".activities.SplashActivity">
   <TextView
       android:id="@+id/tvAppName"
       android:layout_width="wrap_content"
